# surety-config

./: .pylintrc  README.md  pyproject.toml  pytproject.toml
.github/workflows/: commit-check.yml  publish.yml  pylint.yml  release.yml  test.yml
etc/: config.yaml
requirements/: common.txt  test.txt
src/surety_config/: config.py
tests/: test_config.py  test_init_config.py
tests/etc/: config.yaml  local.yaml
