[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "surety-config"
description = "Configuration management for Surety ecosystem."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Elena Kulgavaya", email = "elena.kulgavaya@gmail.com" }
]
dynamic = ["version"]
dependencies = [
    "surety>=0.0.4,<1.0",
    "pyyaml>=6.0.2"
]
keywords = [
    "configuration",
    "testing",
    "contract-testing",
    "automation",
    "surety"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["surety*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
